--- a/ABUQAHF.styles.css
+++ b/ABUQAHF.styles.css
@@ -242,15 +242,22 @@ footer .icon {
 
 /* ----- HANDLE PREFERS REDUCED MOTION FOR THE ICON ANIMATIONS ----- */
 /* --------------- BEGIN USER PREFERS REDUCED MOTION QUERY --------------- */
-@-webkit-keyframes icon-animation {
-    0% {
-        font-variation-settings: "TIME" 1;
+@media (prefers-reduced-motion: reduce) {
+    .icon {
+        -webkit-animation: none;
+        animation: none; /* or use a less intense animation or static state */
     }
-}
-
-@keyframes icon-animation {
-    0% {
-        font-variation-settings: "TIME" 1;
+    
+    @-webkit-keyframes icon-animation {
+        0% {
+            font-variation-settings: "TIME" 1;
+        }
+    }
+    
+    @keyframes icon-animation {
+        0% {
+            font-variation-settings: "TIME" 1;
+        }
     }
 }
 
